# YEGNightOut

./: README.md
Docs/: FaFiFotography-YegFood.csv  FaFiFotography-YegFood.txt  README.md  csvMonster.py  insertAllTheThings.sql
YEGNightOutBackend/: README.md  YEGNightOutBackend.cabal  stack.yaml
YEGNightOutBackend/src/: Api.hs  App.hs  Models.hs  OtherModels.hs
YEGNightOutFrontend/: .gitignore
YEGNightOutFrontend/app/: build.gradle
YEGNightOutFrontend/app/src/androidTest/java/com/github/cbinns/yegnightout/: ExampleInstrumentedTest.java
YEGNightOutFrontend/app/src/main/: AndroidManifest.xml
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/: DetailActivity.java  MainActivity.java
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/adapters/: RestaurantRecyclerViewAdapter.java  RestaurantViewAdapter.java
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/controllers/: RestaurantApi.java  RetrieveRestaurantsTask.java  SpecialApi.java
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/holders/: RestaurantViewHolder.java  ViewHolder.java
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/models/: Restaurant.java  Special.java
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/singletons/: RestaurantsSingleton.java
YEGNightOutFrontend/app/src/main/java/com/github/cbinns/yegnightout/views/: DetailActivity.java  MainActivity.java
YEGNightOutFrontend/app/src/main/res/layout/: activity_main.xml  card_view.xml  detail_view.xml
YEGNightOutFrontend/app/src/main/res/values/: colors.xml  strings.xml
YEGNightOutFrontend/app/src/test/java/com/github/cbinns/yegnightout/: ExampleUnitTest.java
YEGNightOutFrontend/gradle/wrapper/: gradle-wrapper.properties
